# rjpo-gaussian-sampling

./: .gitignore  README.md  examples.ipynb  pyproject.toml  setup.py
rjpo/: __init__.py  cg.py  rjpo.py  util.py
