[build-system]
requires = ["setuptools>=59.2.0", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "rjpo"
version = "0.0.1"
authors = [
  { name="Jonathan Lindbloom", email="jonathan@lindbloom.com" },
]
description = "An implementation of a reversible jump perturbation optimization (RJPO) method for sampling high-dimensional Gaussians."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["gaussian sampling"]

[project.urls]
"Homepage" = "https://github.com/jlindbloom/rjpo-gaussian-sampling"
"Bug Tracker" = "https://github.com/jlindbloom/rjpo-gaussian-sampling/issues"
